<resources>
    <string name="app_name">TapMessage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_account">Create your Account</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_button">Sign In</string>
    <string name="google_text">Google</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_empty">Field is empty</string>
    <string name="error_username_more4">Must be more than 4 characters</string>
    <string name="error_email_more8">Must be more than 8 characters</string>
    <string name="error_email_true">Invalid mail</string>
    <string name="error_confirm">Passwords don\'t match</string>
    <string name="error_phone_more">There must be 11 characters</string>
</resources>